minor media query tweaks for display of heb user message on mobile phones

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -1113,6 +1113,10 @@ footer.press {
     }
   }
 
+  .monograph .monograph-info-epub .monograph-metadata .additional-metadata dd > form {
+    width: 120%;
+  }
+
 }
 
 @media(max-width: 460px) {
