Addresses HELIO-1825 -- don't use form actions as links.

--- a/app/views/e_pubs/access.html.erb
+++ b/app/views/e_pubs/access.html.erb
@@ -22,17 +22,13 @@
             <p>Not you? <%= current_user.email %></p>
             <p>If you have purchased individual access you may try logging in again.</p>
             <p class="text-center">
-              <form action="<%= main_app.destroy_user_session_path %>">
-                <button type="submit" class="btn btn-default">Sign Out</button>
-              </form>
+              <a class="btn btn-default" href="<%= main_app.destroy_user_session_path %>">Sign Out</a>
             </p>
             <p>Or speak with an customer service representative.</p>
           <% else %>
             <p>If you have purchased individual access log in.</p>
             <p class="text-center">
-              <form action="<%= main_app.default_login_path %>">
-                <button type="submit" class="btn btn-default">Sign In</button>
-              </form>
+              <a class="btn btn-default" href="<%= main_app.default_login_path %>">Sign In</a>
             </p>
           <% end %>
         </div>
