--- a/app/views/hyrax/file_sets/_show_actions.html.erb
+++ b/app/views/hyrax/file_sets/_show_actions.html.erb
@@ -1,12 +1,10 @@
 <div class="form-actions">
   <% if can?(:edit, presenter) %>
-    <form action="<%= edit_polymorphic_path([main_app, presenter]) %>">
-      <button type="submit" class="btn btn-default btn-lg">Edit</button>
-    </form>
+    <a class="btn btn-default btn-lg" href="<%= edit_polymorphic_path([main_app, presenter]) %>">Edit</a>
     <!-- TODO: remove the following button, it will be replaced by breadcrumbs -->
-    <form action="<%= parent_path(parent) %>">
-      <button type="submit" class="btn btn-default btn-lg"><%= "Back to #{parent.human_readable_type}" %></button>
-    </form>
+    <a class="btn btn-default btn-lg" href="<%= parent_path(parent) %>">
+      <%= "Back to #{parent.human_readable_type}" %>
+    </a>
   <% end %>
   <% if can?(:edit, presenter) || presenter.allow_embed? %>
     <form action="#" onsubmit="CopyToClipboard()" style="display:inline;">
