--- a/app/views/e_pubs/show.html.erb
+++ b/app/views/e_pubs/show.html.erb
@@ -6,11 +6,7 @@
     <%
 # load what we need to show the webgl/3-d model if needed
 webgl_id = @monograph_presenter.webgl_id
-webgl = if Dir.exist?(UnpackService.root_path_from_noid(webgl_id, 'webgl'))
-          Webgl::Unity.from_directory(UnpackService.root_path_from_noid(webgl_id, 'webgl'))
-        else
-          Webgl::Unity.null_object
-        end
+webgl = Webgl::Unity.from_directory(UnpackService.root_path_from_noid(webgl_id, 'webgl'))
 @unity_loader = "/webgl/#{webgl_id}/#{webgl.unity_loader}"
 @unity_json = "/webgl/#{webgl_id}/#{webgl.unity_json}"
     %>
