Addresses HELIO-2014 modify sign in button label in login options page.

--- a/app/views/e_pubs/access.html.erb
+++ b/app/views/e_pubs/access.html.erb
@@ -26,7 +26,7 @@
           <% else %>
             <p>If you have purchased an individual subscription, login in using your University of Michigan Friend account.</p>
             <p class="text-center">
-              <a class="btn btn-default" href="<%= main_app.default_login_path %>">Sign In</a>
+              <a class="btn btn-default" href="<%= main_app.default_login_path %>">Sign In as Individual</a>
             </p>
           <% end %>
         </div>
