--- a/app/views/monograph_catalog/_index_epub_toc.html.erb
+++ b/app/views/monograph_catalog/_index_epub_toc.html.erb
@@ -1,15 +1,31 @@
-<% @monograph_presenter.epub_presenter.chapters.each do |chapter| %>
-  <div class="row chapter">
-    <div class="col-sm-12">
-      <h3><a href="<%= epub_path(id: @monograph_presenter.epub_id, anchor: chapter.cfi + "/4/1:0") %>"><%= chapter.title %></a></h3>
-      <% if chapter.downloadable? %>
-      <div class="btn-group download" role="group" aria-label="Read or Download Chapter">
-        <a class="btn btn-default btn-sm" href="<%= epub_download_chapter_path(id: @monograph_presenter.epub_id, cfi: chapter.cfi) %>" data-turbolinks="false">
-        <i id="download" class="oi" data-glyph="data-transfer-download" title="Download chapter" aria-hidden="true"></i> Download</a>
-        <a class="btn btn-default btn-sm" href="<%= epub_path(id: @monograph_presenter.epub_id, anchor: chapter.cfi + "/4/1:0") %>"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> Read</a>
-      </div>
+<% level = 0 %>
+    <% @monograph_presenter.epub_presenter.sections.each do |section| %>
+      <% if section.level > level %>
+        <% level += 1 %>
+        <ol class="row toc section">
+          <li class="col-sm-12">
+      <% elsif section.level == level %>
+        </li>
+        <li class="col-sm-12">
+      <% else %>
+        </li>
+        <% while section.level < level %>
+          <% level -= 1 %>
+          </ol>
+        </li>
+        <% end %>
+        <li class="col-sm-12">
       <% end %>
-      <hr>
-    </div>
-  </div>
-<% end %>
+      <a href="<%= epub_path(id: @monograph_presenter.epub_id, anchor: section.cfi + "/4/1:0") %>"><%= section.title %></a>
+      <% if section.downloadable? %>
+        <span class="download">
+          <a class="btn btn-default btn-sm" href="<%= epub_download_section_path(id: @monograph_presenter.epub_id, cfi: section.cfi) %>" data-turbolinks="false">
+            <i id="download" class="oi" data-glyph="data-transfer-download" title="Download section" aria-hidden="true"></i>
+            Download
+          </a>
+          <a class="btn btn-default btn-sm" href="<%= epub_path(id: @monograph_presenter.epub_id, anchor: section.cfi + "/4/1:0") %>"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> Read</a>
+        </span>
+      <% end %>
+    <% end %>
+  </li>
+</ol>
