--- a/app/views/shared/_brand_fulcrum_footer_block.html.erb
+++ b/app/views/shared/_brand_fulcrum_footer_block.html.erb
@@ -6,6 +6,6 @@
     <li><a href="/blog/" data-turbolinks="false">Blog</a></li>
     <li><a href="mailto:fulcrum-info@umich.edu">Contact</a></li>
     <li><a href="https://github.com/mlibrary/heliotrope">Contribute</a></li>
-    <li><% if current_user %> <%= link_to 'Log Out', main_app.destroy_user_session_path, class: 'log-out' %> <% else %> <%= link_to 'Log In', main_app.default_login_path, class: 'login' %> <% end %></li>
+    <li><% if current_user %> <%= link_to 'Log Out', main_app.destroy_user_session_path, class: 'log-out', 'data-turbolinks': 'false' %> <% else %> <%= link_to 'Log In', main_app.default_login_path, class: 'login', 'data-turbolinks': 'false' %> <% end %></li>
   </ul>
 </div>
