mobile Safari offers to call ISBNs

--- a/app/views/layouts/boilerplate.html.erb
+++ b/app/views/layouts/boilerplate.html.erb
@@ -28,6 +28,7 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/assets/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+    <meta name="format-detection" content="telephone=no">
 
     <!-- Citation metadata for Google Scholar -->
     <%= render 'shared/metadata' %>
