HELIO-2074 Create and use "minimal" epubs for fixed-width layout epubs

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -944,6 +944,11 @@ footer.press {
       box-shadow: 0 5px 6px rgba(10, 10, 10, 0.4);
     }
   }
+  .cozy-module-book-loading-status {
+    margin-top: 7em;
+    margin-left: 1.125em;
+    width: 100px;
+  }
 }
 
 .cozy-container i[class^='icon-'] {
