--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -442,14 +442,44 @@ footer.press {
     .monograph-assets-toc-epub-content {
       padding-top: 4em;
     }
+
+    ul.toc {
+      list-style: none;
+    }
+
+    ul.toc > li {
+      padding: 1em 0;
+    }
+
+    ul.toc > li:hover,
+    ul.toc > li > ul.toc > li:hover {
+      background-color: #eeeeee;
+    }
+
+    ul.toc > li > ul.toc > li:last-child,
+    ul.toc > li > ul.toc > li > ul.toc > li:last-child {
+      padding-bottom: 0;
+    }
+
+    ul.toc > li > ul.toc > li:first-child,
+    ul.toc > li > ul.toc > li > ul.toc > li:first-child {
+      padding-top: 2em;
+    }
+
+    #toc > div > ul.toc {
+      font-size: 1.2em;
+    }
+
     .chapter {
       padding-left: 1em;
     }
 
     .download {
       display: inline-block;
-      padding-left: 2em;
-      padding-top: .4em;
+      padding: 0;
+      position: absolute;
+      margin-top: -.25em;
+      right: 20px;
     }
   }
 
