--- a/app/views/monograph_catalog/_index_epub_toc.html.erb
+++ b/app/views/monograph_catalog/_index_epub_toc.html.erb
@@ -3,7 +3,7 @@
   <% @monograph_presenter.epub_presenter.intervals.each do |interval| %>
     <% if interval.level > level %>
       <% level += 1 %>
-      <ul class="row toc section">
+      <ul class="toc section">
         <li>
     <% elsif interval.level == level %>
        </li>
@@ -17,15 +17,15 @@
       <% end %>
       <li>
     <% end %>
-    <a href="<%= epub_path(id: @monograph_presenter.epub_id, anchor: interval.cfi) %>"><%= interval.title %></a>
+    <a href="<%= epub_path(id: @monograph_presenter.epub_id, anchor: section.cfi) %>"><%= interval.title %></a>
     <% if interval.downloadable? %>
-      <span class="download">
+      <div class="btn-group download" role="group" aria-label="Read or Download Section">
         <a class="btn btn-default btn-sm" href="<%= epub_download_interval_path(id: @monograph_presenter.epub_id, cfi: interval.cfi, title: interval.title) %>" data-turbolinks="false">
           <i id="download" class="oi" data-glyph="data-transfer-download" title="Download section" aria-hidden="true"></i>
           Download
         </a>
-        <a class="btn btn-default btn-sm" href="<%= epub_path(id: @monograph_presenter.epub_id, anchor: interval.cfi + "/4/1:0") %>"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> Read</a>
-      </span>
+        <a class="btn btn-default btn-sm" href="<%= epub_path(id: @monograph_presenter.epub_id, anchor: interval.cfi + "/4/1:0") %>"><span class="glyphicon glyphicon-book" title="Read section" aria-hidden="true"></span> Read</a>
+      </div>
     <% end %>
   <% end %>
   </li>
