HELIO-1751 - modify headings on asset page and homepage to address accessibility issues; add relevant styles to maintain same look with the now correct markup

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -771,6 +771,12 @@ footer.press {
     border-top: 0 solid #fff;
   }
 
+  span.section {
+    margin: 2em 0 1em;
+    display: block;
+    font-size: 1.3em
+  }
+
   #info {
     table tbody tr:last-of-type th {
       vertical-align: middle;
