--- a/app/views/hyrax/file_sets/show.html.erb
+++ b/app/views/hyrax/file_sets/show.html.erb
@@ -40,7 +40,7 @@
       <div class="row asset-attributes">
         <div class="col-sm-12">
           <h1 id="asset-title"><%= @presenter.title %></h1>
-          <span>From <em><%= link_to @presenter.monograph.title, main_app.monograph_catalog_path(@presenter.monograph_id) %></em>
+          <span class="section">From <em><%= link_to @presenter.monograph.title, main_app.monograph_catalog_path(@presenter.monograph_id) %></em>
             <% if @presenter.monograph.authors? %>
               by <%= render_markdown @presenter.monograph.authors %>
             <% end %>
