HELIO-2038 - update accessibility page; post VPAT; link to accessibility and terms from the Fulcrum list of links

--- a/fulcrum/css/custom.css
+++ b/fulcrum/css/custom.css
@@ -712,7 +712,8 @@ footer.page-footer {
   padding-left: 2.5rem; }
 
 .post-content ul li {
-  list-style-type: disc; }
+  list-style-type: disc;
+  margin-bottom: .3em; }
 
 .button-collapse {
   color: #26a69a; }
