--- a/app/views/press_catalog/index.html.erb
+++ b/app/views/press_catalog/index.html.erb
@@ -13,11 +13,10 @@
   </div>
   <% else %>
   <div class="row">
-    <div class="col-sm-1"></div>
+    <div class="col-sm-1">&nbsp;</div>
     <div class="col-sm-11 results-container">
       <%= render 'catalog/search_results' %>
     </div>
   </div>
   <% end %>
-
 </div>
