HELIO-1882 Restrict chapter downloads to DIV TYPE="chapter"

--- a/app/views/monograph_catalog/_index_epub_toc.html.erb
+++ b/app/views/monograph_catalog/_index_epub_toc.html.erb
@@ -2,10 +2,12 @@
   <div class="row chapter">
     <div class="col-sm-12">
       <h3><a href="<%= epub_path(id: @monograph_presenter.epub_id, anchor: section.cfi + "/4/1:0") %>"><%= section.title %></a></h3>
-      <% if section.downloadable? %>
+      <% if @monograph_presenter.epub_presenter.multi_rendition? %>
         <div class="btn-group download" role="group" aria-label="Read or Download Chapter">
+          <% if section.downloadable? %>
           <a class="btn btn-default btn-sm" href="<%= epub_download_section_path(id: @monograph_presenter.epub_id, cfi: section.cfi, title: section.title) %>" data-turbolinks="false">
             <i id="download" class="oi" data-glyph="data-transfer-download" title="Download chapter" aria-hidden="true"></i> Download</a>
+          <% end %>
           <a class="btn btn-default btn-sm" href="<%= epub_path(id: @monograph_presenter.epub_id, anchor: section.cfi + "/4/1:0") %>"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> Read</a>
         </div>
       <% end %>
@@ -13,4 +15,3 @@
     </div>
   </div>
 <% end %>
-
