--- a/app/views/e_pubs/show.html.erb
+++ b/app/views/e_pubs/show.html.erb
@@ -54,7 +54,7 @@ webgl = Webgl::Unity.from_directory(UnpackService.root_path_from_noid(webgl_id, 
         // TODO: only show logo for publishers that also have CSS overrides. Currently only HEB has this.
         <% if defined? @subdomain %>
         // only include logos for heb, nyupress, and gabii at this point
-        <% if %w[heb nyupress gabii].include? @subdomain %>
+        <% if %w[heb nyupress gabii michigan].include? @subdomain %>
         cozy.control.widget.panel({
           region: 'top.header.left',
           template: '<div class="logo"><%= link_to (image_tag logo(@subdomain), role: 'link', alt: @subdomain + ' catalog on Fulcrum'), URI.join(main_app.root_url, @subdomain).to_s %>',
