Addresses HELIO-2087 combining characters not displaying on catalog pages.

--- a/app/assets/stylesheets/application/themes.scss
+++ b/app/assets/stylesheets/application/themes.scss
@@ -64,7 +64,7 @@ $heb-black-80: #342f2e;
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,600i,700');
 
 @mixin open-sans {
-  font-family: 'Open Sans', Helvetica, sans-serif;
+  font-family: 'Open Sans', Arial, sans-serif;
 }
 
 .heb {
