--- a/app/views/fulcrum/_reports.html.erb
+++ b/app/views/fulcrum/_reports.html.erb
@@ -1,1 +1,7 @@
+<% content_for :head do %>
+  <meta name="turbolinks-cache-control" content="no-cache">
+<% end %>
 <h1>Reports</h1>
+<ul>
+  <li><%= link_to "COUNTER Reports", new_counter_report_path %></li>
+</ul>
