--- a/app/views/monograph_catalog/_index_epub_toc.html.erb
+++ b/app/views/monograph_catalog/_index_epub_toc.html.erb
@@ -17,13 +17,15 @@
       <% end %>
       <li>
     <% end %>
-    <a href="<%= epub_path(id: @monograph_presenter.epub_id, anchor: section.cfi) %>"><%= interval.title %></a>
-    <% if interval.downloadable? %>
+    <a class="toc-link" href="<%= epub_path(id: @monograph_presenter.epub_id, anchor: interval.cfi) %>"><%= interval.title %></a>
+    <% if @monograph_presenter.epub_presenter.multi_rendition? %>
       <div class="btn-group download" role="group" aria-label="Read or Download Section">
+        <% if interval.downloadable? %>
         <a class="btn btn-default btn-sm" href="<%= epub_download_interval_path(id: @monograph_presenter.epub_id, cfi: interval.cfi, title: interval.title) %>" data-turbolinks="false">
           <i id="download" class="oi" data-glyph="data-transfer-download" title="Download section" aria-hidden="true"></i>
           Download
         </a>
+        <% end %>
         <a class="btn btn-default btn-sm" href="<%= epub_path(id: @monograph_presenter.epub_id, anchor: interval.cfi + "/4/1:0") %>"><span class="glyphicon glyphicon-book" title="Read section" aria-hidden="true"></span> Read</a>
       </div>
     <% end %>
