image-service: break browser caching

--- a/app/views/hyrax/file_sets/media_display/_leaflet_image.html.erb
+++ b/app/views/hyrax/file_sets/media_display/_leaflet_image.html.erb
@@ -3,7 +3,7 @@
     <meta name="turbolinks-cache-control" content="no-cache">
 <% end %>
 
-<% riiif_url = "/image-service/#{file_set.id}/info.json" %>
+<% riiif_url = "/image-service/#{file_set.id}/info.json#{file_set.image_cache_breaker}" %>
 <div id="image"></div>
 <script>
     $().ready(function() {
