--- a/app/views/press_catalog/_index_gallery_monograph_wrapper.html.erb
+++ b/app/views/press_catalog/_index_gallery_monograph_wrapper.html.erb
@@ -2,7 +2,7 @@
 <div class="document col-xs-6 col-md-4">
   <div class="thumbnail">
     <a href="<%= polymorphic_path(url_for_document(document)) %>" >
-      <img class="img-responsive" src="/image-service/<%=document.representative_id%>/full/145,/0/default.jpg"
+      <img class="img-responsive" src="/image-service/<%=document.representative_id%>/full/145,/0/default.jpg<%= presenter.representative_presenter&.image_cache_breaker %>"
            alt="Cover image for <%= presenter.representative_alt_text %>">
     </a>
     <div class="caption">
