fix monograph single/batch forms

--- a/app/views/hyrax/monographs/_attribute_rows.html.erb
+++ b/app/views/hyrax/monographs/_attribute_rows.html.erb
@@ -8,7 +8,7 @@
 <%= presenter.attribute_to_html(:holding_contact) %>
 
 <%= presenter.attribute_to_html(:creator_full_name, label: t('author'), render_as: :linked) %>
-<%= presenter.attribute_to_html(:contributor, label: t('additional_authors'), render_as: :linked) %>
+<%= presenter.attribute_to_html(:contributor, label: t('contributors'), render_as: :linked) %>
 <%= presenter.attribute_to_html(:creator_display) %>
 
 <%= presenter.attribute_to_html(:date_published) %>
