--- a/app/views/e_pubs/access.html.erb
+++ b/app/views/e_pubs/access.html.erb
@@ -69,6 +69,7 @@
             idSelectUIParms.ignoreURLParams = true; // TODO: Figure out why this is needed, or what needs to be fixed to remove it.
             // idSelectUIParms.testGUI = true;
             (new IdPSelectUI()).draw(idSelectUIParms);
+            // document.getElementById("main").focus(); TODO: Possible solution for HELIO-2013
           </script>
           <p><em>For other institutions that do not use the above login method:</em><p>
           <ul>
