--- a/app/views/components/show.html.erb
+++ b/app/views/components/show.html.erb
@@ -2,8 +2,14 @@
 <div id="maincontent">
   <div class="row">
     <div class="col-md-12"><h1>Component</h1></div>
+    <% fileset = FileSet.find HandleService.noid(@component.handle) %>
+    <% monograph = fileset.parent %>
     <div class="col-md-1"><em>Handle</em></div>
-    <div class="col-md-11"><%= link_to @component.handle, HandleService.url(HandleService.noid(@component.handle)) %></div>
+    <div class="col-md-11"><%= link_to @component.handle, HandleService.url(fileset.id) %></div>
+    <div class="col-md-1"><em>FileSet</em></div>
+    <div class="col-md-11"><%= link_to fileset.id, hyrax_file_set_path(fileset.id) %></div>
+    <div class="col-md-1"><em>Monograph</em></div>
+    <div class="col-md-11"><%= link_to monograph.id, monograph_catalog_path(monograph.id) %></div>
     <div class="col-md-12"><h2>Products</h2></div>
     <div class="col-md-12">
       <%= render partial: 'products', locals: { component: @component, products: @component.products } %>
