--- a/app/views/monograph_catalog/_index_monograph.html.erb
+++ b/app/views/monograph_catalog/_index_monograph.html.erb
@@ -12,6 +12,9 @@
       <p><%= @monograph_presenter.permission_badge %>
       <%= @monograph_presenter.workflow.badge %></p>
     <% end %>
+    <% if @monograph_presenter.peer_review? %>
+      <div><%= @monograph_presenter.peer_review.file.content.force_encoding("UTF-8").html_safe %></div>
+    <% end %>
   </div><!-- /.monograph-cover -->
   <div class="col-sm-9 monograph-metadata">
     <h1><%= @monograph_presenter.title %></h1>
