--- a/app/views/fulcrum/_lessees.html.erb
+++ b/app/views/fulcrum/_lessees.html.erb
@@ -13,9 +13,7 @@
   <% lessees.each do |lessee| %>
     <tr>
       <td>
-        <% if lessee.grouping? %>
-          <span class="glyphicon glyphicon-duplicate" aria-hidden="true"></span>
-        <% elsif lessee.institution? %>
+        <% if lessee.institution? %>
           <span class="glyphicon glyphicon-registration-mark" aria-hidden="true"></span>
         <% end %>
       </td>
