--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -1201,3 +1201,21 @@ footer.press {
     }
   }
 }
+
+///////////////////////////////////
+// GOOGLE DATA STUDIO/ANALYTICS EMBEDS
+///////////////////////////////////
+.iframe-container {
+  overflow: hidden;
+  padding-top: 56.25%;
+  position: relative;
+}
+
+.iframe-container iframe {
+  border: 0;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
